# Vibe-Trading

./: .gitignore  README.md  README_ar.md  README_ja.md  README_ko.md  README_zh.md  bench_report.json  pyproject.toml
.github/workflows/: test.yml
agent/: .env.example  SKILL.md  api_server.py  mcp_server.py
agent/backtest/: runner.py
agent/backtest/loaders/: registry.py
agent/cli/: _legacy.py  main.py
agent/src/: market_data.py  preflight.py
agent/src/agent/: loop.py
agent/src/api/: settings_routes.py
agent/src/config/: env_schema.py
agent/src/memory/: lifecycle.py  persistent.py
agent/src/providers/: capabilities.py  chat.py  llm.py  llm_providers.json  minimax_token_plan.py
agent/src/tools/: trade_journal_parsers.py
agent/src/trading/connectors/ibkr/: local.py
agent/tests/: test_agent_loop_terminal_state.py  test_chat_llm_streaming.py  test_cli_init.py  test_cli_live.py  test_hotness_decay.py  test_ibkr_local.py  test_llm.py  test_llm_provider_defaults.py  test_minimax_token_plan.py  test_preflight.py  test_registry.py  test_security_auth_api.py  test_settings_api.py
agent/tests/memory/: test_memory_dedup.py
agent/tests/memory/benchmarks/: __init__.py  conftest.py  metrics.py  runner.py  test_benchmark.py
frontend/: vite.config.ts
frontend/src/__tests__/: viteProxy.test.ts
frontend/src/components/chat/: MandateProposalCard.tsx  MarkdownContent.tsx  MessageBubble.tsx  RunnerStatus.tsx  ThinkingTimeline.tsx  ToolProgressIndicator.tsx  WelcomeScreen.tsx
frontend/src/components/chat/__tests__/: MarkdownContent.test.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/hooks/__tests__/: useSSE.test.ts
frontend/src/lib/: api.ts  i18n.ts
frontend/src/pages/: Agent.tsx  AlphaZoo.tsx  Correlation.tsx  Home.tsx  Settings.tsx
frontend/src/stores/: preferences.ts
frontend/src/stores/__tests__/: preferences.test.ts
