[project]
name = "vibe-trading-ai"
version = "0.1.9"
description = "Natural-language finance research AI agent with backtesting"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    {name = "HKUDS", email = "hkuds@connect.hku.hk"},
]
keywords = ["finance", "trading", "backtesting", "agent", "swarm", "quantitative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "rich>=15.0.0",
    "pyyaml>=6.0.3",
    "langchain>=1.3.4",
    "langchain-core>=1.4.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint>=4.1.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "oauth-cli-kit>=0.1.3",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "pypdfium2>=5.9.0",
    "Pillow>=12.2.0",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "duckdb>=1.5.3",
    "scikit-learn>=1.9.0",
    "joblib>=1.5.3",
    "smartmoneyconcepts>=0.0.27",
    "pyharmonics>=1.5.3",
    "tushare>=1.4.29",
    "requests>=2.34.2",
    "yfinance>=1.4.1",
    "akshare>=1.18.64",
    "ccxt>=4.5.56",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "sse-starlette>=3.4.4",
    "fastmcp>=3.4.2",
    "ddgs>=9.14.4",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "weasyprint>=69.0",
    "prompt_toolkit>=3.0.52",
]

[project.urls]
Homepage = "https://vibetrading.wiki/"
Documentation = "https://vibetrading.wiki/docs/"
Repository = "https://github.com/HKUDS/Vibe-Trading"
Issues = "https://github.com/HKUDS/Vibe-Trading/issues"

[project.scripts]
vibe-trading = "cli:main"
vibe-trading-mcp = "mcp_server:main"

[tool.setuptools]
package-dir = {"" = "agent"}
py-modules = ["api_server", "mcp_server"]

[tool.setuptools.packages.find]
where = ["agent"]
include = ["src*", "backtest*", "cli*"]

[tool.setuptools.package-data]
"src" = [
    "skills/**/*.md",
    "skills/**/*.yaml",
    "skills/**/*.json",
    "providers/*.json",
    "swarm/presets/*.yaml",
    "shadow_account/templates/*.j2",
    "shadow_account/templates/*.html",
    "shadow_account/templates/*.css",
]
"backtest" = ["*.py"]
"src.factors" = ["zoo/**/*.yaml", "zoo/**/*.md", "zoo/**/NOTICE"]

[project.optional-dependencies]
ibkr = [
    "ib_async>=2.1.0",
]
deepseek = [
    "langchain-deepseek>=1.0.0,<2",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-socket>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["agent/tests"]
pythonpath = ["agent"]
markers = [
    "unit: Unit tests (fast, no network)",
    "integration: Integration tests (may need network)",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["agent"]

[tool.coverage.run]
source = ["agent"]
omit = [
    "agent/tests/*",
    "agent/tests/**/*",
    "agent/**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0
exclude_also = [
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Alpha zoo files import the full src.factors.base surface verbatim
# to match research-paper formulas. F401 (unused-import) is noise here;
# F841 (unused-local-variable) stays active to catch real formula bugs.
"agent/src/factors/zoo/**/*.py" = ["F401"]
